--- a/HDRezka/ClientApp/package.json
+++ b/HDRezka/ClientApp/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/video.js": "^7.3.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
     "reinspect": "^1.1.0",
     "typescript": "^3.7.5",
