Added persisted reducer

--- a/HDRezka/ClientApp/package.json
+++ b/HDRezka/ClientApp/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.4.1",
     "reinspect": "^1.1.0",
     "typescript": "^3.7.5",
+    "use-persisted-reducer": "^2.1.0",
     "video.js": "^7.7.5"
   },
   "scripts": {
