--- a/HDRezka/ClientApp/package.json
+++ b/HDRezka/ClientApp/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-loader-spinner": "^3.1.0",
     "@types/video.js": "^7.3.8",
+    "@use-it/event-listener": "^0.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
