--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,3 +23,11 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+    - name: Dotnet publish
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/github
+    - name: 'Run Azure webapp deploy action using publish profile credentials'
+      uses: azure/webapps-deploy@v1
+      with:
+        app-name: hdrwebapp
+        publish-profile: ${{ secrets.azureWebAppPublishProfile }} 
+        package: ${{env.DOTNET_ROOT}}/github 
