--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
     - name: Dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/github
-    - name: 'Run Azure webapp deploy action using publish profile credentials'
+    - name: 'Run Azure webapp FR deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with:
         app-name: hdrwebapp
