Updated logic for seasons

--- a/HDRezka/ClientApp/package.json
+++ b/HDRezka/ClientApp/package.json
@@ -24,8 +24,8 @@
     "video.js": "^7.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
